# ziptree-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: simple.rs
