[package]
name = "ziptree"
version = "0.2.0"
authors = ["jerry73204 <jerry73204@gmail.com>", "howsiyu <howseeu@gmail.com>"]
edition = "2021"
description = "Tarjan's zip tree implemented in Rust"
categories = ["data-structures", "algorithms"]
documentation = "https://docs.rs/ziptree/0.1.0/ziptree/"
repository = "https://github.com/jerry73204/ziptree-rs"
homepage = "https://github.com/jerry73204/ziptree-rs"
license = "MIT"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
